# green-monitor

./: .gitignore  pom.xml
api/: pom.xml
api/src/main/java/ua/nure/kryvko/greenmonitor/: AdminInitializer.java
api/src/main/resources/: application.properties
api/src/test/java/ua/nure/kryvko/greenmonitor/: AuthControllerTest.java
frontend/: .editorconfig  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AdminRoute.jsx  GreenhouseCard.jsx  Header.jsx  NotificationBlock.jsx  NotificationItem.jsx  NotificationsPanel.jsx  PlantCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  AdminPlants.jsx  Dashboard.jsx  GreenhouseList.jsx  GreenhouseOverview.jsx  Login.jsx  NotFound.jsx  Notifications.jsx  PlantsList.jsx  Register.jsx  UserProfile.jsx
iot/: CMakeLists.txt
iot/include/: Dht22Reader.h  MqttPublisher.h  SensorData.h
iot/src/: Dht22Reader.cpp  MqttPublisher.cpp  main.cpp
src/main/java/ua/nure/kryvko/greenmonitor/: GreenmonitorApplication.java
src/main/java/ua/nure/kryvko/greenmonitor/auth/: AuthController.java  AuthEntryPointJwt.java  AuthResponse.java  AuthTokenFilter.java  JwtUtil.java  LoginRequest.java  RefreshTokenRequest.java  SignUpRequest.java
src/main/java/ua/nure/kryvko/greenmonitor/config/: GlobalExceptionHandler.java  WebConfig.java  WebSecurityConfig.java
src/main/resources/: application.properties
src/test/java/ua/nure/kryvko/greenmonitor/: AuthControllerTest.java  GreenmonitorApplicationTests.java
(+55 files in other folders)
